# lendabot

./: Cargo.toml  Makefile  README.md  build.sh
lendabot/: Cargo.toml
lendabot-github/: Cargo.toml  Makefile
lendabot-github/src/command/: back_merge.rs  merge.rs  mod.rs  ping.rs  release.rs  update_release.rs
lendabot-github/src/payload/: issue_comment_event_payload.rs  mod.rs  pull_request_event_payload.rs
lendabot-slack/: Cargo.toml  Makefile
lendabot-slack/src/: lib.rs
lendabot-slack/src/command/: back_merge.rs  mod.rs  release.rs  update_release.rs
lendabot-slack/src/payload/: mod.rs  slash_command_payload.rs
lendabot/src/: lib.rs
lendabot/src/github/: client.rs
lendabot/src/github/payload/: error_payload.rs  mod.rs  pull_request_commit_payload.rs  pull_request_payload.rs
lendabot/src/github/payload/parts/: comment.rs  error.rs  issue.rs  mod.rs  pull_request.rs  repository.rs
src/: command.rs  github_client.rs  lib.rs  main.rs  main_lambda.rs  payload.rs
src/command/: command_github.rs  command_slack.rs  hotfix.rs  merge.rs  mod.rs  ping.rs  release.rs  update_release.rs
src/github/: client.rs  issue_comment.rs  merge_method.rs  mod.rs  pull_request.rs
src/github/payload/: issue_comment_event_payload.rs  mod.rs  pull_request_commit_payload.rs  pull_request_event_payload.rs  pull_request_payload.rs
src/github/payload/parts/: base.rs  comment.rs  commit.rs  head.rs  issue.rs  mod.rs  pull_request.rs  repository.rs
src/slack/payload/: slash_command_payload.rs
