[package]
name = "lendabot"
version = "0.1.0"
authors = ["Marko Kunic <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
lambda_runtime = "0.2.1"
lambda_http = "0.1.0"
lazy_static = "1.3.0"
regex = "1.2.0"
reqwest = "0.9.19"

[lib]
name = "lendabot"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "src/bin/lambda.rs"

[[bin]]
name = "local"
path = "src/bin/local.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
