[package]
name = "lendabot"
version = "0.1.0"
authors = ["Marko Kunic <kunicmarko20@gmail.com>"]
edition = "2018"

[features]
lambda-github = []
lambda-slack = ['serde_urlencoded']

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
serde_urlencoded = { version = "0.5.1", optional = true }
lambda_runtime = "0.2.1"
lambda_http = "0.1.0"
lazy_static = "1.3.0"
regex = "1.2.0"
reqwest = "0.9.19"
cfg-if = "0.1.9"

[lib]
name = "lendabot"
path = "src/lib.rs"

[[bin]]
name = "lambda_github"
path = "bin/lambda_github.rs"

[[bin]]
name = "lambda_slack"
path = "bin/lambda_slack.rs"

[[bin]]
name = "local_github"
path = "bin/local_github.rs"

[[bin]]
name = "local_slack"
path = "bin/local_slack.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
