[package]
name = "lendabot-github"
version = "0.1.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
lendabot = { path = "../lendabot"}
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
lazy_static = "1.3.0"
lambda_runtime = "0.2.1"
lambda_http = "0.1.0"
regex = "1.2.0"


[[bin]]
name = "bootstrap"
path = "bin/lambda.rs"

[[bin]]
name = "local"
path = "bin/local.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
