[package]
name = "lendabot-slack"
version = "0.1.0"
authors = ["kunicmarko20 <kunicmarko20@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
lendabot = { path = "../lendabot"}
serde_urlencoded = "0.5.1"
lazy_static = "1.3.0"
lambda_runtime = "0.2.1"
lambda_http = "0.1.0"
regex = "1.2.0"

[lib]
name = "lendabot_slack"
path = "src/lib.rs"

[[bin]]
name = "bootstrap"
path = "bin/lambda.rs"

[[bin]]
name = "local"
path = "bin/local.rs"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
